@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -58,14 +57,14 @@ public class LanguageService {
     public List<LanguageDTO> getAllLanguages() {
         return languageRepository.findAll().stream()
             .map(this::toDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     @Cacheable("languages")
     public List<LanguageDTO> getActiveLanguages() {
         return languageRepository.findByActiveTrueOrderBySortOrderAsc().stream()
             .map(this::toDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     @Cacheable(value = "languages", key = "#code")
